# PinyinDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/creativept/pinyindemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/creativept/pinyindemo2/: IPinyinDecoderService.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/android/: com_android_inputmethod_pinyin_PinyinDecoderService.cpp
app/src/main/java/com/creativept/pinyindemo2/: BalloonHint.java  CandidateView.java  CandidateViewListener.java  CandidatesContainer.java  ComposingView.java  EnglishInputProcessor.java  Environment.java  InputModeSwitcher.java  KeyMapDream.java  MainActivity.java  MyReceiver.java  PinyinDecoderService.java  PinyinIME.java  Settings.java  SettingsActivity.java  SkbContainer.java  SkbPool.java  SkbTemplate.java  SoftKey.java  SoftKeyToggle.java  SoftKeyboard.java  SoftKeyboardView.java  SoundManager.java  XmlKeyboardLoader.java
app/src/main/res/layout/: activity_main.xml  candidates_container.xml  floating_container.xml  skb_container.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: settings.xml  skb_qwerty.xml  skb_template1.xml
app/src/test/java/com/creativept/pinyindemo2/: ExampleUnitTest.java
